[tool.poetry]
name = "gym-tictactoe-np"
version = "0.3.0"
description = "3D TicTacToe environment for OpenAI's gym written with Numpy."
license = "MIT"
authors = ["Ishan Manchanda <ishanmanchanda70@gmail.com>"]
repository = "https://github.com/IshanManchanda/gym-tictactoe-np"
readme = "README.md"
keywords = ["tictactoe", "tictactoe-3d", "gym", "openai-gym", "gym-environment", "numpy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Games/Entertainment :: Board Games",
    "Topic :: Games/Entertainment :: Turn Based Strategy",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
]

[tool.poetry.dependencies]
python = "^3.7,<3.11"
gym = ">=0.20,<0.27"
numpy = "^1.21.2"
myst-parser = {version = "^0.15.2", optional = true}
Sphinx = {version = "^4.2.0", optional = true}
sphinx-rtd-theme = {version = "^1.0.0", optional = true}
sphinxcontrib-napoleon = {version = "^0.7", optional = true}

[tool.poetry.dev-dependencies]

[tool.poetry.extras]
docs = ["myst-parser", "sphinx", "sphinx-rtd-theme", "sphinxcontrib-napoleon"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
